[package]
name = "corvus_js"
version = "0.1.0"
authors = ["Stephen Sugden <me@stephensugden.com>"]

[lib]
crate-type = ["cdylib"]

[dependencies]
stdweb = "0.4.2"
stdweb-derive = "*"
# corvus_core = { git = "https://github.com/corvuslang/corvus_core", branch = "develop" }
corvus_core = { path = "../corvus_core" }
lazy_static = "*"
serde = "*"
serde_derive = "*"
serde_json="*"